add path to images

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Home</title>
 </head>
 <body id="main">
-        <img src="/images/SVG/bg.svg" alt="" id="bg">
-        <img src="/images/SVG/logo.svg" alt="" id="logo">
-        <img src="/images/SVG/rects.svg" alt="" id="rects">
+        <img src="./images/SVG/bg.svg" alt="" id="bg">
+        <img src="./images/SVG/logo.svg" alt="" id="logo">
+        <img src="./images/SVG/rects.svg" alt="" id="rects">
        
         <div class="welcome-text">
             <div class="heading">
